# ChangeLog for app-editors/emacs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.372 2010/04/08 12:11:00 ulm Exp $

  08 Apr 2010; Ulrich Mueller <ulm@gentoo.org> emacs-22.3-r4.ebuild,
  emacs-23.1-r3.ebuild:
  Fix owner of scores files.

  11 Mar 2010; Ulrich Mueller <ulm@gentoo.org> emacs-18.59-r6.ebuild,
  emacs-21.4-r20.ebuild, emacs-22.3-r4.ebuild, emacs-23.1-r3.ebuild:
  Fix building with GNU CPP 4.5, bug 308653.

*emacs-23.1-r3 (08 Mar 2010)
*emacs-22.3-r4 (08 Mar 2010)
*emacs-21.4-r20 (08 Mar 2010)

  08 Mar 2010; Ulrich Mueller <ulm@gentoo.org> +emacs-21.4-r20.ebuild,
  +emacs-22.3-r4.ebuild, +emacs-23.1-r3.ebuild:
  Fix building with libpng-1.4.

  21 Feb 2010; Ulrich Mueller <ulm@gentoo.org> emacs-23.1-r2.ebuild:
  Updated patch for arm, bug 302357, thanks to armin76.

  31 Jan 2010; Raúl Porcel <armin76@gentoo.org> emacs-23.1-r2.ebuild:
  arm stable wrt #296159

  26 Jan 2010; Ulrich Mueller <ulm@gentoo.org> emacs-23.1-r2.ebuild:
  Fix build problem on arm, bug 302357.

  25 Jan 2010; Ulrich Mueller <ulm@gentoo.org> -emacs-22.3-r2.ebuild,
  -emacs-23.1.ebuild:
  Remove old.

  25 Jan 2010; Raúl Porcel <armin76@gentoo.org> emacs-22.3-r3.ebuild,
  emacs-23.1-r2.ebuild:
  arm/ia64/s390/sh stable wrt #296159

  22 Jan 2010; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r19.ebuild,
  emacs-22.3-r3.ebuild, emacs-23.1-r2.ebuild:
  Depend on SLOT 0 of media-libs/jpeg, as requested by ssuominen.

  16 Jan 2010; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r19.ebuild,
  emacs-22.3-r3.ebuild, emacs-23.1-r2.ebuild:
  Restore note in pkg_postinst that Emacs needs fonts, bug 137598.

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org> emacs-23.1-r2.ebuild:
  Stable on alpha, bug #296159

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org> emacs-22.3-r3.ebuild:
  Stable on alpha, bug #296159

  30 Dec 2009; Ulrich Mueller <ulm@gentoo.org> emacs-18.59-r6.ebuild: