@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/emacs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.372 2010/04/08 12:11:00 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.373 2010/04/09 10:01:15 fauli Exp $
+
+  09 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
+  emacs-21.4-r20.ebuild, emacs-22.3-r4.ebuild, emacs-23.1-r3.ebuild:
+  stable x86, bug 313861
 
   08 Apr 2010; Ulrich Mueller <ulm@gentoo.org> emacs-22.3-r4.ebuild,
   emacs-23.1-r3.ebuild:
